Adjusting Sizes Based on Browser Size

--- a/experience.css
+++ b/experience.css
@@ -2,6 +2,7 @@ body {
     background-image: url("Pictures/Background.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .Header {
