--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("Pictures/Background.jpeg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     background-attachment: fixed;
 }
 
